--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor = "let aluno of alunos">
+    <ion-item *ngFor = "let aluno of alunos" (click) = 'selecionaAluno(aluno)'>
       <ion-label>{{aluno.id}}</ion-label>
       <ion-label>{{aluno.nome}}</ion-label>
       <ion-label>{{aluno.nota}}</ion-label>
